--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "net": "^1.0.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
