--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.474.0",
+    "nanoid": "^5.0.9",
     "net": "^1.0.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
